--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -113,3 +113,18 @@
   preview={wave-mechanics.gif},
   abbr={Vision}
 }
+
+@article{Macek_2023,
+doi = {10.3847/1538-4357/aca0a0},
+url = {https://dx.doi.org/10.3847/1538-4357/aca0a0},
+year = {2023},
+month = {feb},
+publisher = {The American Astronomical Society},
+volume = {943},
+number = {2},
+pages = {152},
+author = {Wiesław M. Macek and Dariusz Wójcik and James L. Burch},
+title = {Magnetospheric Multiscale Observations of Markov Turbulence on Kinetic Scales},
+journal = {The Astrophysical Journal},
+abstract = {In our previous studies we have examined solar wind and magnetospheric plasma turbulence, including Markovian character on large inertial magnetohydrodynamic scales. Here we present the results of the statistical analysis of magnetic field fluctuations in the Earth’s magnetosheath, based on the Magnetospheric Multiscale mission at much smaller kinetic scales. Following our results on spectral analysis with very large slopes of about −16/3, we apply a Markov-process approach to turbulence in this kinetic regime. It is shown that the Chapman–Kolmogorov equation is satisfied and that the lowest-order Kramers–Moyal coefficients describing drift and diffusion with a power-law dependence are consistent with a generalized Ornstein–Uhlenbeck process. The solutions of the Fokker–Planck equation agree with experimental probability density functions, which exhibit a universal global scale invariance through the kinetic domain. In particular, for moderate scales we have the kappa distribution described by various peaked shapes with heavy tails, which, with large values of the kappa parameter, are reduced to the Gaussian distribution for large inertial scales. This shows that the turbulence cascade can be described by the Markov processes also on very small scales. The obtained results on kinetic scales may be useful for a better understanding of the physical mechanisms governing turbulence.}
+}
