--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -17,3 +17,34 @@ title = {Magnetospheric Multiscale Observations of Markov Turbulence on Kinetic 
 journal = {The Astrophysical Journal},
 abstract = {In our previous studies we have examined solar wind and magnetospheric plasma turbulence, including Markovian character on large inertial magnetohydrodynamic scales. Here we present the results of the statistical analysis of magnetic field fluctuations in the Earth’s magnetosheath, based on the Magnetospheric Multiscale mission at much smaller kinetic scales. Following our results on spectral analysis with very large slopes of about −16/3, we apply a Markov-process approach to turbulence in this kinetic regime. It is shown that the Chapman–Kolmogorov equation is satisfied and that the lowest-order Kramers–Moyal coefficients describing drift and diffusion with a power-law dependence are consistent with a generalized Ornstein–Uhlenbeck process. The solutions of the Fokker–Planck equation agree with experimental probability density functions, which exhibit a universal global scale invariance through the kinetic domain. In particular, for moderate scales we have the kappa distribution described by various peaked shapes with heavy tails, which, with large values of the kappa parameter, are reduced to the Gaussian distribution for large inertial scales. This shows that the turbulence cascade can be described by the Markov processes also on very small scales. The obtained results on kinetic scales may be useful for a better understanding of the physical mechanisms governing turbulence.}
 }
+
+@article{10.1093/mnras/stad2584,
+    author = {Macek, Wiesław M and Wójcik, Dariusz},
+    title = "{Statistical analysis of stochastic magnetic fluctuations in space plasma based on the MMS mission}",
+    journal = {Monthly Notices of the Royal Astronomical Society},
+    volume = {526},
+    number = {4},
+    pages = {5779-5790},
+    year = {2023},
+    month = {09},
+    abstract = "{Based on the Magnetospheric Multiscale (MMS) mission we look at magnetic field fluctuations in the Earth’s magnetosheath. We apply the statistical analysis using a Fokker–Planck equation to investigate processes responsible for stochastic fluctuations in space plasmas. As already known, turbulence in the inertial range of hydromagnetic scales exhibits Markovian features. We have extended the statistical approach to much smaller scales in space, where kinetic theory should be applied. Here we study in detail and compare the characteristics of magnetic fluctuations behind the bow shock, inside the magnetosheath, and near the magnetopause. It appears that the first Kramers–Moyal coefficient is linear and the second term is a quadratic function of magnetic increments, which describe drift and diffusion, correspondingly, in the entire magnetosheath. This should correspond to a generalization of Ornstein–Uhlenbeck process. We demonstrate that the second-order approximation of the Fokker–Planck equation  leads to non-Gaussian kappa distributions of the probability density functions. In all cases in the magnetosheath, the approximate power-law distributions are recovered. For some moderate scales, we have the kappa distributions described by various peaked shapes with heavy tails. In particular, for large values of the kappa parameter this shape is reduced to the normal Gaussian distribution. It is worth noting that for smaller kinetic scales the rescaled distributions exhibit a universal global scale invariance, consistently with the stationary solution of the Fokker–Planck equation. These results, especially on kinetic scales, could be important for a better understanding of the physical mechanism governing turbulent systems in space and astrophysical plasmas.}",
+    issn = {0035-8711},
+    doi = {10.1093/mnras/stad2584},
+    url = {https://doi.org/10.1093/mnras/stad2584},
+    eprint = {https://academic.oup.com/mnras/article-pdf/526/4/5779/52600435/stad2584.pdf},
+}
+
+@article{PhysRevE.110.025203,
+  title = {Testing for Markovian character of transfer of fluctuations in solar wind turbulence on kinetic scales},
+  author = {W\'ojcik, Dariusz and Macek, Wies\l{}aw M.},
+  journal = {Phys. Rev. E},
+  volume = {110},
+  issue = {2},
+  pages = {025203},
+  numpages = {16},
+  year = {2024},
+  month = {Aug},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevE.110.025203},
+  url = {https://link.aps.org/doi/10.1103/PhysRevE.110.025203}
+}
